<resources>
    <string name="app_name">pbwallet</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="hobby">Hobby</string>
    <string name="button">Button</string>
    <string name="home">Home</string>
    <string name="funds">Funds</string>
    <string name="stats">Stats</string>
    <string name="enter">Enter</string>
    <string name="signin">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="required_fields">*Required fields</string>
    <string name="registration_page">Registration Page</string>
    <string name="your_wallets">Your Wallets</string>
    <string name="lineforseparate">lineforseparate</string>
    <string name="shadow_of_card">Shadow of card</string>
    <string name="card">Card</string>
    <string name="plus_transaction">plus_transaction</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="money">Money</string>
    <string name="euro">€</string>
    <string name="comma">,</string>
    <string name="purchase_reason">Purchase reason</string>
    <string name="add_reason">Add Reason</string>
    <string name="insert_a_new_reason">Insert A New Reason</string>
    <string name="insert_a_new_reason1">Insert a new reason</string>
    <string name="confirm">Confirm</string>
    <string name="reason">Reason</string>
    <string name="your_total_funds">Your Total Funds</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="_00">00</string>
    <string name="budget">Budget</string>
    <string name="add_budget">Add Budget</string>
    <string name="select_what_you_want_to_have_a_budget_on">Select what you want to have a budget on</string>
    <string name="your_budget_become_active_from_now_and_last_1_month">Your budget become active from now and last 1 month</string>
    <string name="your_total_budget">Your Total Budget</string>
    <string name="dollaro">$</string>
    <string name="sterlina">£</string>
    <string name="your_stats">Your Stats</string>
    <string name="todo">TODO</string>
    <string name="entrata">Earnings</string>
    <string name="uscita">Expenses</string>
    <string name="percentuale">Percentage</string>
    <string name="last_5_transactions">Last 5 Transactions</string>
    <string name="your_total_transactions">Your Total Transactions</string>
    <string name="log_in">Log-in</string>
</resources>