<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/nav_fund"
        android:icon="@drawable/ic_baseline_attach_money_24"
        android:title="@string/funds"/>
    <item
        android:id="@+id/add_transaction"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add_transaction"/>
    <item
        android:id="@+id/nav_budget"
        android:icon="@drawable/ic_baseline_work_24"
        android:title="@string/budget"
        />
    <item
        android:id="@+id/nav_stats"
        android:icon="@drawable/ic_baseline_timeline_24"
        android:title="@string/stats"/>
</menu>