<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_walletTF"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_wallet"
        android:fontFamily="@font/cocon_regular"
        android:textSize="35sp"
        android:textColorHint="@color/celeste"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_wallet"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:theme="@style/TextInputLayoutAppearance"
        android:layout_margin="20dp"
        app:boxStrokeColor="@color/celeste"
        app:hintTextColor="@color/celeste">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_walletTF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/relative_moneyNEW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/money_symbolNEW"
            android:textSize="33sp"
            android:fontFamily="@font/cocon_regular"
            android:gravity="center"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/money_intNEW"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_toStartOf="@+id/money_decNEW"
            android:layout_toEndOf="@+id/money_symbolNEW"
            android:hint="@string/money"
            android:layout_marginStart="20dp"
            android:theme="@style/TextInputLayoutAppearance"
            app:boxStrokeColor="@color/celeste"
            app:hintTextColor="@color/celeste">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/money_intTFNEW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/comma_symbol"
            android:hint="@string/comma"
            android:textSize="33sp"
            android:fontFamily="@font/cocon_regular"
            android:gravity="center"
            android:layout_toStartOf="@id/money_decNEW"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/money_decNEW"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:theme="@style/TextInputLayoutAppearance"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            app:hintTextColor="@color/celeste"
            app:boxStrokeColor="@color/celeste"
            android:hint="@string/_00">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/money_decTFNEW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/confirm_new_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:backgroundTint="@color/celeste"
        android:layout_margin="20dp" />

</LinearLayout>